--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,6 +38,7 @@ en:
       must_exist: must exist
       taken: has already been taken
   order:
+    mark_fulfill: Mark Fulfilled
     all: All Orders
     create_order: Create Order
     add: Add Order item
@@ -49,6 +50,8 @@ en:
       total_sale: Total Order Items
       average: Average Quantity Sold
       actions: Actions
+      items: Order Products
+      quantity: Order Quantity
     no_order: No orders found
     create:
       success: Order created successfully!
