--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -62,3 +62,6 @@ en:
     select_product: Select Product
   order_item:
     remove: Remove Order Item?
+  errors:
+    no_items_select: Please add an order item
+    not_found: Record not found
